[gd_scene load_steps=2 format=3 uid="uid://dm4vkokf2rma7"]

[ext_resource type="Script" path="res://game/entities/components/polygon_component/polygon_component.gd" id="1_dcl4k"]

[node name="PolygonComponent" type="Node2D"]
script = ExtResource("1_dcl4k")

[node name="BorderPolygon" type="Polygon2D" parent="."]

[node name="BodyPolygon" type="Polygon2D" parent="."]

[node name="HpPolygon" type="Polygon2D" parent="."]
